# ddcutil-varlink

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  varlinkctl-examples.bash  wrapper.h
src/: com.ddcutil.service.varlink  com_ddcutil_service.rs  ddcutil.rs  main.rs
systemd/user/: ddcutil.service  ddcutil.socket
